# gibz-fiesta

./: .gitignore  README.md
.github/workflows/: rust.yml
Documentation/: Dokumentation.docx  M326DokumentationGIBZFIESTA.docx  Projektauftrag.md  Testing.docx  notes.md
Fiesta-Client/: README.md  index.html  package-lock.json  package.json  svelte.config.js
Fiesta-Client/src/: App.svelte  app.css  app.d.ts  app.html
Fiesta-Client/src/components/: Header.svelte
Fiesta-Client/src/lib/: Header.svelte  apiCalls.js  stores.js  utils.js
Fiesta-Client/src/routes/: +error.svelte  +layout.svelte  +page.server.js  +page.svelte
Fiesta-Client/src/routes/add/: +server.js
Fiesta-Client/src/routes/admin/: +page.svelte
Fiesta-Client/src/routes/login/: +page.svelte
Fiesta-Client/src/routes/logout/: +page.svelte
Fiesta-Client/src/routes/profile/: +page.svelte
Fiesta-Client/static/: global.css  testJobFieldData.json  testUserData.json  testdata.json
Fiesta-Server/: .env  Cargo.toml  README.md  Rocket.toml
Fiesta-Server/src/: main.rs  models.rs  routes.rs
Fiesta-Server/src/api/: admin.rs  mod.rs  skill.rs  user.rs
Fiesta-Server/src/api-docs/: index.html  style.css
Fiesta-Server/src/data/: mod.rs  mongo_connector.rs
Fiesta-Server/src/helpers/: biscuit.rs  endecr.rs  grandmas_bakery.rs  mod.rs  token.rs
Fiesta-Server/src/models/: mod.rs  skill_model.rs  user_model.rs
Fiesta-Server/src/repository/: mongo_connector.rs
Fiesta-Server/src/routes/: skills.rs  users.rs
Fiesta-Server/src/tests/: mod.rs  skill_tests.rs  user_tests.rs
(+2 files in other folders)
