[package]
name = "fiesta_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To add other dependencies, add them in the format stated below.
[dependencies]
rocket = {version = "0.5.0-rc.2", features= ["json", "secrets"]}
mongodb = "2.3.0"
tokio = { version = "1", features = ["full"] }
