[package]
name = "fiesta_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To add other dependencies, add them in the format stated below.
[dependencies]
rocket = {version = "0.5.0-rc.2", features= ["json", "secrets"]}
rocket_contrib = "0.4.10"
dotenv = "0.15.0"
mongodb = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
rust-argon2 = "1.0"
rocket_cors = "0.5.2"
tokio = "1"
